--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SURVIVOR ING</title>
+    <title>SURVIVOR</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="preload" href="./img/board.png">
+    <link rel="preload" href="./img/board.png" as="image">
     <link rel="preload" href="./img/frame1.png" as="image">
     <link rel="preload" href="./img/frame2.png" as="image">
     <link rel="preload" href="./img/frame3.png" as="image">
+    <link rel="preload" href="./fonts/gabrwffr.ttf" as="font">
 </head>
 <body>
 
@@ -32,6 +33,11 @@
         <div id="btn-start" class="button user-select-none">DRAW NAME</div>
         <br/>
         <div id="btn-clear" class="button user-select-none">CLEAR</div>
+
+        <div id="lang" class="lang" style="margin-left: 20px">
+            <span id="ro-RO" class="selected">🇷🇴</span>
+            <span id="en-US">🇺🇸</span>
+        </div>
     </div>
 </div>
 
