--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SURVIVOR</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🦁</text></svg>">
     <link rel="stylesheet" href="./style.css">
     <link rel="preload" href="./img/board.png" as="image">
     <link rel="preload" href="./img/frame1.png" as="image">
@@ -29,14 +31,14 @@
                  alt="textarea-bg"/>
         </div>
         <div id="name" class="name user-select-none"></div>
-
+        <br/>
         <div id="btn-start" class="button user-select-none">DRAW NAME</div>
         <br/>
         <div id="btn-clear" class="button user-select-none">CLEAR</div>
 
-        <div id="lang" class="lang" style="margin-left: 20px">
-            <span id="ro-RO" class="selected">🇷🇴</span>
+        <div id="lang" class="lang">
             <span id="en-US">🇺🇸</span>
+            <span id="ro-RO">🇷🇴</span>
         </div>
     </div>
 </div>
